<resources>
    <string name="toast_free_ram">Free Memory: %1$d MB. Saved %2$d MB.</string>
    <string name="toast_free_all_ram">Free Memory: %1$d MB. Your RAM is in best state.</string>
    <string name="toast_device_admin_required">Please enable device administration.</string>
    <string name="intro_skip">Skip</string>
    <string name="intro_finish">Let\'s start.</string>
    <string name="intro1_text">This is ILauncher. A fully open source launcher. Here for you.</string>
    <string name="intro2_text">Swipe inwards from the left border of your home screen to open the minibar. There you can find the settings,
        change the wallpaper, and do lots of other stuff.</string>
    <string name="intro3_title">Settings</string>
    <string name="intro3_text">You can configure your desktop, the app drawer, and the dock, try it out!</string>
    <string name="intro4_community">The Launcher from the community for the community</string>
    <string name="intro4_features">Features packed</string>
    <string name="intro4_customizable">Customizable</string>
    <string name="custom">Custom</string>
    <string name="minibar">Minibar</string>
    <string name="minibar_0">Change the minibar layout.</string>
    <string name="minibar_1">Set the desktop wallpaper.</string>
    <string name="minibar_2">Lock the screen immediately, requires device administration.</string>
    <string name="minibar_4">Shortcut to device settings.</string>
    <string name="minibar_5">Shortcut to Ilauncher settings.</string>
    <string name="minibar_7">Display all available volume sliders.</string>
    <string name="minibar_8">Open the app drawer.</string>
    <string name="minibar_9">Open the search bar.</string>
    <string name="minibar_10">Mobile network settings.</string>
    <string name="about_libs">Open Source Libraries</string>
    <string name="about_rate">Rate</string>
    <string name="about_credit">Contributors</string>
    <string name="about_credit_text_all_contributors">All contributors</string>
    <string name="pref_title__desktop">Desktop</string>
    <string name="pref_title__dock">Dock</string>
    <string name="pref_title__app_drawer">App Drawer</string>
    <string name="pref_title__gestures">Gestures</string>
    <string name="pref_title__icons">Icons</string>
    <string name="pref_title__miscellaneous">Miscellaneous</string>
    <string name="pref_title__about">About</string>
    <string name="pref_title__size">Size</string>
    <string name="pref_title__style">Style</string>
    <string name="pref_title__appearance">Appearance</string>
    <string name="pref_title__color">Colors</string>
    <string name="pref_title__search_bar">Search Bar</string>
    <string name="pref_title__interfaces">Interfaces</string>
    <string name="pref_title__inputs">Inputs</string>
    <string name="pref_title__feels">Feels</string>
    <string name="pref_title__others">Others</string>
    <string name="pref_title__desktop_style">Style</string>
    <string name="pref_title__desktop_indicator_style">Indicator Style</string>
    <string name="pref_summary__desktop_style">Choose between a normal desktop and showing all installed apps.</string>
    <string name="pref_summary__minibar">Configure the order and visibility of minibar items.</string>
    <string name="pref_title__search_bar_enable">Search Bar</string>
    <string name="pref_summary__search_bar_enable">Display a search bar above the desktop.</string>
    <string name="pref_title__desktop_fullscreen">Fullscreen</string>
    <string name="pref_title__desktop_hide_grid">Hide Grid</string>
    <string name="pref_summary__desktop_fullscreen">Enable fullscreen for the desktop.</string>
    <string name="pref_summary__desktop_hide_grid">Hide the guiding grid.</string>
    <string name="pref_title__desktop_show_position_indicator">Position Indicator</string>
    <string name="pref_summary__desktop_show_position_indicator">Show the page indicator below the desktop.</string>
    <string name="pref_title__desktop_show_label">Show Labels</string>
    <string name="pref_summary__desktop_show_label">Show item labels below their icons.</string>
    <string name="pref_title__desktop_rotate">Rotate</string>
    <string name="pref_summary__desktop_rotate">Allow screen rotate.</string>
    <string name="alow_notify">Allow notification access for iLauncher? </string>
    <string name="dsc_notify_ilauncher">iLauncher will be able to read all notifications, including personal information such as contact names and the text
    of message you receive.It will also be able to dismiss notifications or trigger</string>
    <string name="dsc_usage">usage access allows an apps to track what other apps that your are using and how often,
        as well as your operator,language settings and other details.</string>
    <string name="permit_help">Permit drawing over other apps </string>
    <string name="dsc_help">Select apps to allow their buttons,pop-ups,or other elements to appear over other apps you are using. </string>
    <string name="pref_title__search_bar_base_uri">Search URI</string>
    <string name="pref_summary__search_bar_base_uri">Set the URI used for web searches.</string>
    <string name="pref_dialog__search_bar_base_uri">Enter the URI that should be used for web searches. The tag {query} can be used as
      placeholder for the search query, in case no placeholder is used the search query will be appended at the end of the URI.</string>
    <string name="pref_title__search_bar_force_browser">Force browser search</string>
    <string name="pref_summary__search_bar_force_browser">Always use the browser for online searches.</string>
    <string name="pref_title__desktop_background_color">Background</string>
    <string name="pref_title__desktop_folder_color">Folder Background</string>
    <string name="pref_title__desktop_folder_color_text">Folder Text</string>
    <string name="pref_title__search_bar_show_hidden_apps">Show hidden apps</string>
    <string name="pref_summary__search_bar_show_hidden_apps">Include hidden apps in the search results.</string>
    <string name="pref_summary__dock_size">Set the dock size.</string>
    <string name="pref_title__dock_show_label">Show Labels</string>
    <string name="pref_summary__dock_show_label">Show item labels below their icons.</string>
    <string name="pref_title__dock_background_color">Background</string>
    <string name="pref_title__drawer_style">Style</string>
    <string name="pref_summary__drawer_style">Choose between a paged and vertical app drawer.</string>
    <string name="pref_title__hide_apps">Hide Apps</string>
    <string name="pref_summary__hide_apps">Hide selected apps from launcher.</string>
    <string name="pref_title__drawer_show_card_view">Card View</string>
    <string name="pref_summary__drawer_show_card_view">Show a card view above the drawer background.</string>
    <string name="pref_title__drawer_remember_position">Remember Last Page</string>
    <string name="pref_summary__drawer_remember_position">Keep track of the current app drawer page.</string>
    <string name="pref_title__drawer_show_position_indicator">Position Indicator</string>
    <string name="pref_summary__drawer_show_position_indicator">Show the page indicator or scrollbar depending on the style.</string>
    <string name="pref_title__drawer_show_label">Show Labels</string>
    <string name="pref_summary__drawer_show_label">Show item labels below their icons.</string>
    <string name="pref_title__drawer_background_color">Background</string>
    <string name="pref_title__drawer_card_color">Card View</string>
    <string name="pref_title__drawer_label_color">Label</string>
    <string name="pref_title__drawer_fast_scroll_color">Scrollbar</string>
    <string name="settings__pref_drawer_label_font_size">Label Text Size</string>
    <string name="pref_title__overall_animation_speed_modifier">Animation Speed</string>
    <string name="pref_summnary__overall_animation_speed_modifier">Modify the overall speed of animations</string>
    <string name="pref_title__gesture_feedback">Gesture Feedback</string>
    <string name="pref_summary__gesture_feedback">Get feedback when long pressing an item on the desktop.</string>
    <string name="pref_title__gesture_quick_swipe">Quick Swipe Drawer</string>
    <string name="pref_summary__gesture_quick_swipe">Swipe upwards on the dock to open the app drawer.</string>
    <string name="pref_title__gesture_double_tap">Double Tap</string>
    <string name="pref_title__gesture_swipe_up">Swipe Upwards</string>
    <string name="pref_title__gesture_swipe_down">Swipe Downwards</string>
    <string name="pref_title__gesture_pinch">Pinch</string>
    <string name="pref_title__gesture_unpinch">Unpinch</string>
    <string name="pref_summary__icon_size">Size of all app icons.</string>
    <string name="pref_title__icon_pack">Icon Pack</string>
    <string name="pref_summary__icon_pack">Select an installed icon pack.</string>
    <string name="pref_summary__language">Change language of this app. Restart app for changes to take effect</string>
    <string name="pref_title__language">Language</string>
    <string name="pref_title__backup">Backup</string>
    <string name="pref_summary__backup">Backup and restore your settings.</string>
    <string name="pref_title__clear_database">Clear Database</string>
    <string name="pref_summary__clear_database">Delete the data for the dock and desktop to fix issues.</string>
    <string name="pref_title__restart">Restart</string>
    <string name="pref_summary__restart">Restart the launcher in case it\'s misbehaving.</string>
    <string name="pref_summary__theme">Set the theme for the entire app.</string>
    <string name="pref_title__theme">Theme</string>
    <string name="pref_title__primary_color">Primary Color</string>
    <string name="pref_summary__primary_color">Set the primary color for the app.</string>
    <string name="vertical_scroll_drawer">Vertical</string>
    <string name="horizontal_paged_drawer">Paged</string>
    <string name="desktop_mode_normal">Normal</string>
    <string name="desktop_mode_show_all_apps">Show All Apps</string>
    <string name="desktop_indicator_mode_normal">Normal</string>
    <string name="desktop_indicator_mode_arrow">Arrow</string>
    <string name="dots">Dots</string>
    <string name="label_default">Default</string>
    <string name="request_dummy_text">Hello world!</string>
    <string name="request_please_wait">Searching for installed apps. Please wait.</string>
    <string name="request_toast">No apps selected. Show all apps in drawer?</string>
    <string name="on">On</string>
    <string name="desktop_action">Desktop Action</string>
    <string name="select_app">Select App</string>
    <string name="off">Off</string>
    <string name="ok">OK</string>
    <string name="version">Version</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="wallpaper_pick">Pick Wallpaper</string>
    <string name="wallpaper_unable_to_blur">Unable to blur</string>
    <string name="dialog__icon_pack_title">Pick icon pack</string>
    <string name="dialog__icon_pack_info_toast">Unable to grab the icon without READ_EXTERNAL_STORAGE permission.</string>
    <string name="dialog__backup_app_settings__backup">Backup</string>
    <string name="select_icon_title_default">1. Default</string>
    <string name="select_icon_title_chose_file">2. Select file from device...</string>
    <string name="select_icon_title_available">3. Available</string>
    <string name="request_permissiton_draw_title_button">Open Settings</string>
    <string name="request_permissiton_draw_message">Go to Settings, turn on Permit drawing over other apps for more futures in app.</string>
    <string name="request_permissiton_draw_title">Draw permission</string>
    <string name="search_bar_title">Search applications</string>
    <string name="help_swipe_down_to_search">Swipe down to search</string>
</resources>